tests/cases/literals/errors/u8-literal-range.ari
fn main() -> i64 {
  let byte: u8 = 256;
  return 0;
}
